--- a/configs/.config/MangoHud/MangoHud.conf
+++ b/configs/.config/MangoHud/MangoHud.conf
@@ -164,7 +164,7 @@ frame_timing
 
 ### Display GameMode / vkBasalt running status
 # gamemode
-# vkbasalt
+vkbasalt
 
 ### Gamescope related options
 ## Display the status of FSR (only works in gamescope)
