--- a/configs/.config/MangoHud/MangoHud.conf
+++ b/configs/.config/MangoHud/MangoHud.conf
@@ -10,7 +10,7 @@
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
-# fps_limit=0
+fps_limit=120,60,0
 
 ### early = wait before present, late = wait after present
 # fps_limit_method=
@@ -112,7 +112,7 @@ cpu_temp
 
 ### Display system vram / ram / swap space usage
 # vram
-# ram
+ram
 # swap
 
 ### Display per process memory usage
@@ -193,7 +193,7 @@ vkbasalt
 # fan
 
 ### Display current FPS limit
-# show_fps_limit
+show_fps_limit
 
 ### Display the current resolution
 # resolution
@@ -221,7 +221,7 @@ vkbasalt
 
 
 ### Change the hud font size
- font_size=19
+ font_size=16
 # font_scale=1.0
 # font_size_text=24
 # font_scale_media_player=0.55
@@ -245,7 +245,7 @@ text_outline
 # text_outline_thickness = 1.5
 
 ### Change the hud position
-# position=top-left
+position=top-center
 
 ### Change the corner roundness
 # round_corners=0
@@ -329,9 +329,9 @@ text_outline
 ################ INTERACTION #################
 
 ### Change toggle keybinds for the hud & logging
-# toggle_hud=Shift_R+F12
+toggle_hud=Shift_R+F12
 # toggle_hud_position=Shift_R+F11
-# toggle_fps_limit=Shift_L+F1
+toggle_fps_limit=Shift_L+F1
 # toggle_logging=Shift_L+F2
 # reload_cfg=Shift_L+F4
 # upload_log=Shift_L+F3
