--- a/configs/.config/MangoHud/MangoHud.conf
+++ b/configs/.config/MangoHud/MangoHud.conf
@@ -112,7 +112,7 @@ cpu_temp
 
 ### Display system vram / ram / swap space usage
 # vram
-ram
+# ram
 # swap
 
 ### Display per process memory usage
@@ -221,7 +221,7 @@ show_fps_limit
 
 
 ### Change the hud font size
- font_size=16
+font_size=18
 # font_scale=1.0
 # font_size_text=24
 # font_scale_media_player=0.55
