--- a/configs/.config/vkBasalt/vkBasalt.conf
+++ b/configs/.config/vkBasalt/vkBasalt.conf
@@ -7,8 +7,9 @@
 #fxaa   - Fast Approximate Anti-Aliasing
 #smaa   - Enhanced Subpixel Morphological Antialiasing
 #lut    - Color LookUp Table
-effects = cas:lut
+effects = cas:lut:colors
 
+colors = /home/mikolaj/.local/share/reshade-shaders/Shaders/Colourfulness.fx
 reshadeTexturePath = "/home/mikolaj/.local/share/reshade-shaders/Textures"
 reshadeIncludePath = "/home/mikolaj/.local/share/reshade-shaders/Shaders"
 depthCapture = off
@@ -24,7 +25,7 @@ enableOnLaunch = True
 #1.0 maximum sharp more artefacts
 #Everything in between is possible
 #negative values sharpen even less, up to -1.0 make a visible difference
-casSharpness = 0.6
+casSharpness = 1.0
 
 #dlsSharpness specifies the amount of sharpening in the Denoised Luma Sharpening shader.
 #Increase to sharpen details within the image.
